src/App.scss
/* ... */
/* INTRO PANEL */
.intro-panel-wrapper {
  position: fixed;
  left: 0;
  z-index: 3;
  //top: $FS-boundary-padding;
  // bottom: calc(#{$FS-boundary-padding} + #{$card-peek-height});
  // won't stretch to bottom unless screen height is minimal (then scroll activates)
  top: $FS-boundary-padding;
  bottom: $FS-boundary-padding;
  max-height: 540px;
  min-height: 200px;
  width: $intro-panel-width;
  background: white;
  //border: solid $dark-gray 1px;
  overflow: visible;
  border-top-right-radius: $standard-border-radius;
  border-bottom-right-radius: $standard-border-radius;
  transition: left ease 1s;

  .intro-panel {
    height: 100%;
    overflow: scroll;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
    // so panel appears above the mobile info-icon trigger
    position: relative;
    z-index: 2;
  }

  .trigger {
    position: absolute;
    z-index: 5;
    right: -32px;
    top: 10px;
    border: solid #fff 1px;
    border-left: none;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    background: white;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
    .trigger-icon {
      width: 32px;
      padding: $left-caret-padding;
      height: 32px;
      stroke-width: .5;
    }
  }
  .mobile-trigger {
    // for use on small screens
    display: none;
  }


  &.closed {
    left: -$intro-panel-width;
    .trigger .trigger-icon {
      padding: $right-caret-padding;
    }
  }

  .content {
    padding: 32px;
    //padding-bottom: $intro-next-prev-height;
    padding-bottom: 0;
    // height: 100%;
    position: absolute;
    background-color: white;
    z-index: 4;
    .nav {
      text-align: center;
      .section-name {
        white-space: nowrap;
        cursor: pointer;
        color: #757575;
        &.active {
          color: #000;
        }
      }
      p {
        display: inline;
        font-size: 14px;
        padding-right: 14px;
        &.active {
          font-weight: 700;
        }
      }
    }
    .nav {
      border-bottom: 1px solid $dark-gray; 
      padding-bottom: 8px;
     // margin-bottom: 20px; 
    }
    .header {
      display: flex;
      padding-bottom: 0px;
      margin-bottom: 20px; 
      .info {
        flex: 27px 0;
        flex-shrink: 0;
        align-self: center;
        margin-top: 4px;
        margin-right: 5px;
        .info-icon {
          stroke-width: 0;
          width: 100%;
        }
      }
      h1 {
        padding-left: 10px;
        font-size: 18px;
        font-weight: 700;
        line-height: 1.3;
      }
    }
    
    .section-text {
      p {
        font-size: 14px;
        font-weight: 400;
        // padding: 4px 0;
        display: inline;
        color: $slate-gray;
        &.advance-button {
         // padding-left: 7px;
          font-weight: 700;
          white-space: nowrap;
          cursor: pointer;
        }
      }
    }
  }
  .content-body {
    padding: 0 32px 64px 32px;
    top: 152px;
    position: relative;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.6;
    color: #74757B;
    .section-text {
      p {
        margin-bottom: 16px;
      }
    }
  }
  .bottom-controls {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: $intro-next-prev-height;
    background: white;
    border-top: #d4d4d4 1px solid;
      margin: 0 24px;
    .next-prev {
      display: flex;
      justify-content: space-between;
      width: 41%;
      margin: auto;
      padding-top: 16px;
      font-size: 14px;
      p.advance-button {
        // padding: 0;
        font-weight: 700;
        &.active {
          cursor: pointer;
        }
        &:not(.active) {
          color: $dark-gray;
          .trigger-icon {
            stroke: $dark-gray;
            cursor: unset;
            path {
              cursor: unset;
            }
          }
        }
        .trigger-icon {
          width: 10px;
          stroke-width: 2;
        }
      }
    }
  }
}


/* MAP */
.map-container {
  position: fixed;
  top: 0;
  bottom: 0;
}

/* LEGEND */
.legend {
  position: fixed;
  //top: $FS-boundary-padding;
  top: 32px;
  right: $FS-boundary-padding;
  //background: $semi-trans-light-gray;
  background: #fff;
  padding: 8px;
  border-radius: $standard-border-radius;
  font-size: 12px;
  text-transform: uppercase;
  box-shadow: $very-trans-black 3px 3px 5px;
}
.legend div {
  padding: 4px;
  font-weight: 300;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.legend i {
  width: 10px;
  height: 10px;
  display: inline-block;
  border-radius: 5px;
  margin-right: 8px;
}
.legend i.past {
  background: $color-past;
}
.legend i.ongoing {
  background: $color-ongoing;
}
.legend i.proposed {
  background: $color-proposed;
}

.legend .trigger-icon {
  position: absolute;
  right: 5px;
  top: 5px;
  stroke: black;
  stroke-width: 1;
  fill: none;
  width: 16px;
}

.legend.hidden {
  background: transparent;
  box-shadow: none;

  .trigger-icon {
    position: fixed;
    top: $FS-boundary-padding;
    right: $FS-boundary-padding;

    width: 40px;
    height: 40px;
    padding: 5px;
    border-radius: 50%;
  }
}
.legend.hidden .content {
  display: none;
}

/* TOOLTIP */
.tooltip {
  z-index: 10;
  background: white;
  /* overflows map with absolute */
  position: fixed;
  padding: 15px;
  max-width: 210px;
  box-shadow: $very-trans-black 3px 3px 5px;
  border-top: gray solid 8px;
  border-radius: $standard-border-radius;
}

.tooltip.past {
  border-top-color: $color-past;
}
.tooltip.ongoing {
  border-top-color: $color-ongoing;
}
.tooltip.proposed {
  border-top-color: $color-proposed;
}

.tooltip .detail {
  font-size: 14px;
  padding-top: 5px;
}

.tooltip .name {
  font-weight: 700;
  font-size: 15px;
}

.tooltip .click-hint {
  font-size: 12px;
  font-weight: 400;
  padding-top: 16px;
  text-align: left;
  text-transform: uppercase;
  color: #757575;
}
/* ... */

